DDT-951: Update POST/PUT SI